--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
   
   .left {
     width: 100%;
-    padding: 80px 10px;
+    padding: 80px 0px 80px 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -84,7 +84,7 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
-    padding: 80px 120px 70px 70px;
+    padding: 80px 100px 70px 70px;
     flex-wrap: wrap;
     gap: 10px;
   }
@@ -222,6 +222,10 @@ body {
   
     .col-3 {
       padding: 20px;
+    }
+
+    .right {
+        margin-left: 10px;
     }
   }
   
