--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
     align-items: center;
     background-color: rgb(251, 114, 114);
     margin-bottom: 0;
+    margin: 0;
+    padding: 0;
     height: 55px;
     width: 100%;
   }
